Resolve "Images not shown as clickable"
Squashed commit of the following:

* css: show zoom image as clickable

* add releasenote

* css: update article container id

* css: show article images as clickable

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -213,6 +213,10 @@ img {
     max-width: 100%;
 }
 
+#article-container img {
+    cursor: pointer;
+}
+
 #imgzoom {
     background: rgba(0, 0, 0, 0.5);
 
@@ -238,6 +242,7 @@ img {
 }
 
 #imgzoom img {
+    cursor: pointer;
     width: 90%;
     height: 90%;
     margin: auto;
